# posthog-cli

./: .gitignore  .posthog.toml.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PostHog-cli-prf.md  README.md  dist-workspace.toml
.github/workflows/: auto-tag.yml  release.yml  test.yml
docs/: agent-guide.md  commands.md
examples/: agent-workflow.sh  batch-capture-events.sh  ci-deploy-annotation.sh  daily-metrics-report.sh  error-tracking-triage.sh  experiment-lifecycle.sh  export-all-flags.sh  feature-flag-rollout.sh  gen-man.rs  multi-project-compare.sh
src/: error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs
src/api/endpoints/: actions.rs  annotations.rs  auth.rs  capture.rs  cohorts.rs  dashboards.rs  definitions.rs  errors.rs  experiments.rs  flags.rs  insights.rs  mod.rs  persons.rs  query.rs  surveys.rs
src/cache/: mod.rs
src/cli/: auth.rs  mod.rs
src/config/: credentials.rs  file.rs  mod.rs  project.rs
src/models/: common.rs
src/output/: csv_fmt.rs  json.rs  jsonl.rs  mod.rs  table.rs
tests/: cache_test.rs  cli_integration.rs  error_test.rs  output_test.rs
